Bug 86137 - webkit fails IETC namespaces/prefix-007.xml
Summary: webkit fails IETC namespaces/prefix-007.xml
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL: http://samples.msdn.microsoft.com/iet...
Keywords:
: 86139 (view as bug list)
Depends on:
Blocks: 76198
  Show dependency treegraph
 
Reported: 2012-05-10 14:00 PDT by Dave Tharp
Modified: 2012-09-28 11:47 PDT (History)
6 users (show)

See Also:


Attachments
Patch (6.06 KB, patch)
2012-07-10 01:55 PDT, Takashi Sakamoto
no flags Details | Formatted Diff | Diff
Patch (6.06 KB, patch)
2012-08-01 03:30 PDT, Takashi Sakamoto
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Tharp 2012-05-10 14:00:00 PDT
Filler text has a red background, green background expected.
Comment 1 Takashi Sakamoto 2012-07-10 01:55:06 PDT
Created attachment 151420 [details]
Patch
Comment 2 Takashi Sakamoto 2012-08-01 03:30:48 PDT
Created attachment 155771 [details]
Patch
Comment 3 Eric Seidel (no email) 2012-08-12 04:27:33 PDT
Comment on attachment 155771 [details]
Patch

Seems reasonable.
Comment 4 WebKit Review Bot 2012-08-12 04:38:25 PDT
Comment on attachment 155771 [details]
Patch

Clearing flags on attachment: 155771

Committed r125371: <http://trac.webkit.org/changeset/125371>
Comment 5 WebKit Review Bot 2012-08-12 04:38:29 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Jon Lee 2012-09-28 10:36:50 PDT
*** Bug 86139 has been marked as a duplicate of this bug. ***
Comment 7 Jon Lee 2012-09-28 11:47:20 PDT
Unskipped in Mac with http://trac.webkit.org/changeset/129919