webkit fails IETC namespaces/prefix-007.xml https://bugs.webkit.org/show_bug.cgi?id=86137

Patch by Takashi Sakamoto <tasak@google.com> on 2012-08-12
Reviewed by Eric Seidel.

Source/WebCore:

If a namespace prefix or default namespace is declared more than once
only the last declaration shall be used.

parseAddNamespace doesn't check return value of WTF::HashMap<>::add.
If the return value's isNewEntry is true, the new entry is added with
the specified value. However, if isNewEntry is false, it is required
to update the store value.

No new tests. ietestcenter/css3/namespaces/prefix-007.xml and
ietestcenter/css3/namespaces/prefix-010.xml covers this change.

* css/StyleSheetContents.cpp:
(WebCore::StyleSheetContents::parserAddNamespace):
Modified to check m_namespaces.add's return value.
If the result says not a new entry, updated the value stored in
m_namespaces by using iterator in the result.

LayoutTests:

* platform/chromium/TestExpectations:
Enabled the layout tests, ietestcenter/css3/namespaces/prefix-007.xml
and ietestcenter/css3/namespaces/prefix-010.xml.
* platform/win/ietestcenter/css3/namespaces/prefix-007-expected.txt: Removed.
* platform/win/ietestcenter/css3/namespaces/prefix-010-expected.txt: Removed.
Removed old expectations.

Canonical link: https://commits.webkit.org/111646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125371 268f45cc-cd09-0410-ab3c-d52691b4dbfc